-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: openjdk8u272
-
Component/s: core-libs
-
b01
-
b05
-
solaris, aix
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 467.47: 1506-045 (S) Undeclared identifier TCP_KEEPCNT.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 467.60: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 479.38: 1506-276 (S) Syntax error: possible missing ')'?
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 478.47: 1506-045 (S) Undeclared identifier SOCK_OPT_NAME_KEEPIDLE.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 478.71: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 489.47: 1506-045 (S) Undeclared identifier TCP_KEEPINTVL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 489.62: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 500.46: 1506-045 (S) Undeclared identifier TCP_KEEPCNT.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 500.59: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 512.45: 1506-276 (S) Syntax error: possible missing ')'?
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 511.46: 1506-045 (S) Undeclared identifier SOCK_OPT_NAME_KEEPIDLE.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 511.70: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 522.46: 1506-045 (S) Undeclared identifier TCP_KEEPINTVL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 522.61: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
See also:
https://bugs.openjdk.java.net/browse/JDK-8250631?focusedCommentId=14362734&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-14362734
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 467.60: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 479.38: 1506-276 (S) Syntax error: possible missing ')'?
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 478.47: 1506-045 (S) Undeclared identifier SOCK_OPT_NAME_KEEPIDLE.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 478.71: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 489.47: 1506-045 (S) Undeclared identifier TCP_KEEPINTVL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 489.62: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 500.46: 1506-045 (S) Undeclared identifier TCP_KEEPCNT.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 500.59: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 512.45: 1506-276 (S) Syntax error: possible missing ')'?
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 511.46: 1506-045 (S) Undeclared identifier SOCK_OPT_NAME_KEEPIDLE.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 511.70: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 522.46: 1506-045 (S) Undeclared identifier TCP_KEEPINTVL.
"jdk8u/jdk/src/solaris/native/java/net/ExtendedOptionsImpl.c", line 522.61: 1506-045 (S) Undeclared identifier SOCK_OPT_LEVEL.
See also:
https://bugs.openjdk.java.net/browse/JDK-8250631?focusedCommentId=14362734&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-14362734
- relates to
-
JDK-8194298 Add support for per Socket configuration of TCP keepalive
-
- Resolved
-