8251546: 8u backport of JDK-8194298 breaks AIX and Solaris builds

Reviewed-by: shade